--- a/t04/index.html
+++ b/t04/index.html
@@ -5,6 +5,40 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="main"
+        <div class="main">
+
+            <div class="card" id="murica">
+                <img src="assets/images/Capitan-America.png" alt="Captain America">
+                <div class="card_text">
+                    <p>Captain America<br></p>
+                    <small>Steve Rogers</small>
+                </div>
+            </div>
+
+            <div class="card" id ="ferrum">
+                <img src="assets/images/Iron-man.png" alt="Iron Man">
+                <div class="card_text">
+                    <p>Iron Man<br></p>
+                    <small>Tony Stark</small>
+                </div>
+            </div>
+
+            <div class="card" id="sniper">
+                <img src="assets/images/Black-Widow.png" alt="Black Widow">
+                <div class="card_text">
+                    <p>Black Widow<br></p>
+                    <small>Natasha Romanoff</small>
+                </div>
+            </div>
+
+            <div class="card" id="spidy">
+                <img src="assets/images/Spider-man.png" alt="Spider Man">
+                <div class="card_text">
+                    <p>Spider-Man<br></p>
+                    <small>Peter Parker</small>
+                </div>
+            </div>
+
+        </div>
     </body>
 </html>
