sprint01 t06, correction to t04

--- a/Sprint01/t04/index.html
+++ b/Sprint01/t04/index.html
@@ -10,27 +10,26 @@
     <body>
         <h2>Contents</h2>
         <ol>
-            <li>HTML</li>
+            <li><a href="#html">HTML</a></li>
             <ul>
-                <li>Text tags</li>
-                <li>Link tags</li>
+                <li><a href="#text_tags">Text tags</a></li>
+                <li><a href="#link_tags">Link tags</a></li>
             </ul>
-            <li>CSS</li>
+            <li><a href="#css">CSS</a></li>
             <ul>
-                <li>References</li>
-                <li>Selectors</li>
+                <li><a href="#references">References</a></li>
+                <li><a href="#selectors">Selectors</a></li>
             </ul>
-            <li>Protocols
-                <ul>
-                    <li>Description</li>
-                    <li>HTTP/HTTPS</li>
-                    <li>DNS</li>
-                    <li>IP</li>
-                </ul>
-            </li>
+            <li><a href="#protocols">Protocols</a></li>
+            <ul>
+                <li><a href="#description">Description</a></li>
+                <li><a href="#http">HTTP/HTTPS</a></li>
+                <li><a href="#dns">DNS</a></li>
+                <li><a href="#ip">IP</a></li>
+            </ul>
         </ol>
-        <h1>HTML</h1>
-        <h2>Text tags</h2>
+        <h1 id="html">HTML</h1>
+        <h2 id="text_tags">Text tags</h2>
         <div class="card_wrapper">
             <div class="card">
                 <div class="card_text">
@@ -81,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <h2>Link tags</h2>
+        <h2 id="link_tags">Link tags</h2>
         <div class="card_wrapper">
             <div class="card">
                 <div class="card_text">
@@ -101,8 +100,8 @@
                 </div>
             </div>
         </div>
-        <h1>CSS</h1>
-        <h2>Properties</h2>
+        <h1 id="css">CSS</h1>
+        <h2 id="properties">Properties</h2>
         <div class="card_wrapper">
             <div class="card">
                 <div class="card_text">
@@ -142,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <h2>Selectors</h2>
+        <h2 id="selectors">Selectors</h2>
         <div class="card_wrapper">
             <div class="card">
                 <div class="card_text">
@@ -187,13 +186,13 @@
                 </div>
             </div>
         </div>
-        <h1>Protocols</h1>
-        <h2>Description</h2>
+        <h1 id="protocols">Protocols</h1>
+        <h2 id="description">Description</h2>
         <span>A network protocol is an established set of rules that determine how data is transmitted 
             between different devices in the same network. Essentially, it allows connected devices to 
             communicate with each other, regardless of any differences in their internal processes, 
             structure or design.</span>
-        <h2>HTTP/HTTPS</h2>
+        <h2 id="http">HTTP/HTTPS</h2>
         <h3>Request methods</h3>
         <div class="card_wrapper">
             <div class="card">
@@ -238,11 +237,6 @@
             </div>
         </div>
         <h3>Response status codes</h3>
-        <!--Informational responses (100–199)
-        Successful responses (200–299)
-        Redirects (300–399)
-        Client errors (400–499)
-        Server errors (500–599)-->
         <ol>
             <li>Informational responses (100–199)</li>
             <li>Successful responses (200–299)</li>
@@ -250,7 +244,7 @@
             <li>Client errors (400–499)</li>
             <li>Server errors (500–599)</li>
         </ol>
-        <h2>DNS<br>(record types)</h2>
+        <h2 id="dns">DNS<br>(record types)</h2>
         <div class="card_wrapper">
             <div class="card">
                 <div class="card_text">
@@ -297,8 +291,8 @@
                 </div>
             </div>
         </div>
-        <h2>IP</h2>
-        <span>An Internet Protocol address (IP address) is a numerical label assigned 
+        <h2 id="ip">IP</h2>
+        <span class="ip_text">An Internet Protocol address (IP address) is a numerical label assigned 
             to each device connected to a computer network that uses the Internet 
             Protocol for communication. An IP address serves two main functions: 
             host or network interface identification and location addressing.</span>
