--- a/Sprint03/t03/index.html
+++ b/Sprint03/t03/index.html
@@ -31,7 +31,7 @@
                 <button id="sleep" onclick="sleep()">Sleep</button>
                 <button id="fly" onclick="fly()">Fly</button>
                 <button id="fight" onclick="fight()">Fight with enemy</button>
-                <button id="hero" onclick="hero()">Shazam!</button>
+                <button id="hero" onclick="hero()">Become the God</button>
             </div>
         </div>
         <script src="js/script.js"></script>
